# claude-code-marketplace

./: .changelog-snapshot.md  .coverage  .gitignore  .gitleaks.toml  .markdownlint.json  .plugin-check-sha  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  README.md  issue-body.md  issue-title.txt  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: session-start.sh
.claude/rules/: README.md  agents.md  channels.md  contribution-guide.md  hooks.md  lsp-servers.md  marketplace.md  mcp-servers.md  monitors.md  output-styles.md  plugin-manifest.md  plugin-readme.md  skill-authoring.md  slash-commands.md  statusline.md
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  auto-implement.yml  changelog-monitor.yml  claude-code-review.yml  claude.yml  lint.yml  plugin-improvement-check.yml  security-scan.yml  test-scripts.yml  validate-plugins.yml
plugins/ai-dlc/: README.md  settings.json
scripts/: README.md  debug-hook.sh  pyproject.toml  validate_plugin.py
scripts/tests/: __init__.py  conftest.py  test_agent.py  test_base.py  test_hooks_json.py  test_integration.py  test_lsp_json.py  test_marketplace_json.py  test_mcp_json.py  test_monitors_json.py  test_output_style.py  test_plugin_json.py  test_readme.py  test_secret_detection.py  test_skill.py  test_slash_command.py
scripts/validators/: __init__.py  agent.py  base.py  hooks_json.py  lsp_json.py  marketplace_json.py  mcp_json.py  monitors_json.py  output_style.py  plugin_json.py  readme.py  secret_detection.py  skill.py  slash_command.py
(+87 files in other folders)
